--- a/ABC20190521-郎朗口腔-www.xxx.com-20190521/index.html
+++ b/ABC20190521-郎朗口腔-www.xxx.com-20190521/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,68 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main.css">
 
-
 </head>
 <body>
-    
+    <div class="container">
+        <header class="clearfix">
+            <h1 class="logo pull-left">
+                <a href="index.html" tittle="郎朗口腔" target="_blank">
+                    <img src="./image/logo.png" alt="郎朗口腔">
+                </a>
+            </h1>
+            <div class="pull-right">
+                <div class="menu-link clearfix">
+                    <div class="lang">
+                        中文
+                        <ul>
+                            <a href="">中文</a>
+                            <a href="">英文</a>
+                        </ul>
+                    </div>
+                    <span class="link">|</span>
+                    <a href="tel:0755-86566573">0755-86566573</a>
+                    <span class="link">|</span>
+                    <a href="index.html" title="朗朗口腔集团官网">朗朗口腔集团官网</a>
+                </div>
+
+                <nav>
+                    <ul class="clearfix">
+                        <li class="current">
+                            <a href="index.html" title="首页">首页</a>
+                            <ul>
+                                <li><a href="" title="朗朗阅读">朗朗阅读</a></li>
+                                <li><a href="" title="郎朗优势">郎朗优势</a></li>
+                                <li><a href="" title="核心团队">核心团队</a></li>
+                                <li><a href="" title="郎朗简介">郎朗简介</a>
+                                    <ul>
+                                        <li><a href="" title="朗朗阅读">朗朗阅读</a></li>
+                                        <li><a href="" title="郎朗优势">郎朗优势</a></li>
+                                        <li><a href="" title="核心团队">核心团队</a></li>
+                                        <li><a href="" title="郎朗简介">郎朗简介</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="index.html">走进郎朗</a>
+                            <ul>
+                                <li><a href="" title="朗朗阅读">朗朗阅读</a></li>
+                                <li><a href="" title="郎朗优势">郎朗优势</a></li>
+                                <li><a href="" title="核心团队">核心团队</a></li>
+                                <li><a href="" title="郎朗简介">郎朗简介</a>
+                                    <ul>
+                                        <li><a href="" title="朗朗阅读">朗朗阅读</a></li>
+                                        <li><a href="" title="郎朗优势">郎朗优势</a></li>
+                                        <li><a href="" title="核心团队">核心团队</a></li>
+                                        <li><a href="" title="郎朗简介">郎朗简介</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
